force-app/main/default/objects/GanttResourceAssignment__c/GanttResourceAssignment__c.object-meta.xml
<CustomObject>
    <label>GanttResourceAssignment</label>
    <nameField>
        <displayFormat>GRA{0000000000}</displayFormat>
        <label>GanttResourceAssignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GanttResourceAssignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>