force-app/main/default/objects/GanttResourceAssignment__c/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <label>Delay</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>