force-app/main/default/objects/GanttResourceAssignment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>GanttResource__c</referenceTo>
    <relationshipLabel>GanttResourceAssignments</relationshipLabel>
    <relationshipName>GanttResourceAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>