force-app/main/default/objects/GanttResourceAssignment__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>GanttTask__c</referenceTo>
    <relationshipLabel>GanttResourceAssignments</relationshipLabel>
    <relationshipName>GanttResourceAssignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>