force-app/main/default/objects/GanttResourceAssignment__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>